Module 4 Exercises 4-7